# LeMonADE

./: .gitignore  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  INSTALL  LICENSE  Makefile  README.md  configure
.circleci/: config.yml
docs/: doxygen.conf  mainpage.dox
include/LeMonADE/: LeMonADE.h  Version.h  Version.h.in
include/LeMonADE/analyzer/: AbstractAnalyzer.h  AnalyzerAbstractDump.h  AnalyzerAbstractMSD.h  AnalyzerLatticeOccupation.h  AnalyzerMonomerMSD.h  AnalyzerPermeabilityCalculator.h  AnalyzerPoreFinder.h  AnalyzerRadiusOfGyration.h  AnalyzerSystemMSD.h  AnalyzerWriteBfmFile.h  AnalyzerWriteBfmFileSubGroup.h
include/LeMonADE/core/: ConfigureSystem.h  ConnectedDecorator.h  ConsistencyCheck.h  FeatureHolder.h  GenerateContextType.h  GenerateMonomerType.h  Ingredients.h  Molecules.h  MoleculesRead.h  MoleculesWrite.h  TypelistExtensions.h
include/LeMonADE/feature/: Feature.h  FeatureAttributes.h  FeatureBendingPotential.h  FeatureBendingPotentialReadWrite.h  FeatureBoltzmann.h  FeatureBondset.h  FeatureBondsetUnsaveCheck.h  FeatureBox.h  FeatureBoxRead.h  FeatureBoxWrite.h  FeatureBreak.h  FeatureChangeAttributes.h  FeatureConnectionSc.h  FeatureContactInteractionBcc.h  FeatureContactInteractionReadWrite.h  FeatureContactInteractionSc.h  FeatureExcludedVolume.h  FeatureExcludedVolumeBcc.h  FeatureExcludedVolumeSc.h  FeatureExcludedVolumeScIdOnLattice.h  FeatureFixedMonomers.h  FeatureJumps.h  FeatureLabel.h  FeatureLattice.h  FeatureLatticeBase.h  FeatureLatticePowerOfTwo.h  FeatureLinearForce.h  FeatureMoleculesIO.h  FeatureMoleculesIOUnsaveCheck.h  FeatureNNInteraction.h  FeatureNNInteractionBcc.h  FeatureNNInteractionReadWrite.h  FeatureNNInteractionSc.h  FeaturePairInteraction.h  FeatureReactiveBonds.h  FeatureShearForce.h  FeatureSpringPotentialTwoGroups.h  FeatureSystemInformationDendrimer.h  FeatureSystemInformationLinearMeltWithCrosslinker.h  FeatureSystemInformationRingMelt.h  (+4 more)
include/LeMonADE/io/: AbstractRead.h  AbstractWrite.h  FileImport.h  Parser.h
include/LeMonADE/updater/: AbstractUpdater.h  UpdaterAbstractCreate.h  UpdaterAddLinearChains.h  UpdaterAddStars.h  UpdaterLipidsCreator.h  UpdaterLipidsRandomInitializer.h  UpdaterReadBfmFile.h  UpdaterSimpleConnection.h  UpdaterSimpleSimulator.h  UpdaterSwellBox.h  UpdaterSynchronize.h
include/LeMonADE/utility/: AttributeTags.h  BoundaryCheck.h  DepthIterator.h  DepthIteratorPredicates.h  DistanceCalculation.h  FastBondset.h  GroupByProperty.h  Lattice.h  LatticePredicates.h  MonomerGroup.h  NumericFunctions.h  NumericResultTypes.h  NumericTools.h  PairPotentials.h  R250.h  RandomNumberGenerators.h  ResultFormattingTools.h  SafeCast.h  SlowBondset.h  TaskManager.h  TrackConnection.h  Vector3D.h
projects/: CMakeLists.txt
projects/AnalyzeMonomerMSD/: AnalyzeMonomerMSD.cpp  CMakeLists.txt
projects/Examples/: CMakeLists.txt
projects/Examples/example0/: CMakeLists.txt  ex0main.cpp
projects/Examples/example1/: CMakeLists.txt  ex1main.cpp
projects/Examples/example3/: CMakeLists.txt  ex3main.cpp
projects/Examples/example5/: CMakeLists.txt  ex5analyzer.h  ex5main.cpp  ex5updater.h
projects/SimpleSimulator/: CMakeLists.txt  main.cpp
projects/testproject/: CMakeLists.txt
src/: CMakeLists.txt
src/LeMonADE/analyzer/: CMakeLists.txt
src/LeMonADE/core/: CMakeLists.txt
src/LeMonADE/feature/: CMakeLists.txt  FeatureBox.cpp  FeatureNNInteraction.cpp
src/LeMonADE/io/: AbstractRead.cpp  CMakeLists.txt  Parser.cpp
src/LeMonADE/updater/: CMakeLists.txt
src/LeMonADE/updater/moves/: CMakeLists.txt
src/LeMonADE/utility/: CMakeLists.txt  FastBondset.cpp  R250.cpp  RandomNumberGenerators.cpp  ResultFormattingTools.cpp  SlowBondset.cpp  TaskManager.cpp
tests/: CMakeLists.txt  TestMain.cpp  WriteReadAdditionalBondsTest.bfm  attributesTest.test  featureBondsetTest.test  featureBoxTest.test  fileImportTest.test  fileImportTest2.test  fileImportTest3.test  interactionTagTest.test  molecules.test  parserTest.test  readbfmfile.test  sc64CorruptedBfm.test
tests/analyzer/: TestAnalyzerPermeabilityCalculator.cpp  TestAnalyzerPoreFinder.cpp  TestAnalyzerRadiusOfGyration.cpp  TestWriteBfmFile.cpp
tests/core/: TestConnected.cpp  TestConsistencyCheck.cpp  TestCopyOperator.cpp  TestGenerateContextType.cpp  TestGenerateMonomerType.cpp  TestIngredients.cpp  TestMolecules.cpp  TestTaskManager.cpp
tests/feature/: TestExcludedVolume.cpp  TestFeatureAttributes.cpp  TestFeatureBendingPotential.cpp  TestFeatureBoltzmann.cpp  TestFeatureBondset.cpp  TestFeatureBondsetUnsaveCheck.cpp  TestFeatureBox.cpp  TestFeatureBreak.cpp  TestFeatureConnection.cpp  TestFeatureContactInteractionBcc.cpp  TestFeatureContactInteractionSc.cpp  TestFeatureExcludedVolumeBcc.cpp  TestFeatureExcludedVolumeSc.cpp  TestFeatureExcludedVolumeScIdOnLattice.cpp  TestFeatureFixedMonomer.cpp  TestFeatureJumps.cpp  TestFeatureLabel.cpp  TestFeatureLattice.cpp  TestFeatureLatticePowerOfTwo.cpp  TestFeatureLinearForce.cpp  TestFeatureMoleculesIO.cpp  TestFeatureNNInteractionBcc.cpp  TestFeatureNNInteractionSc.cpp  TestFeatureReactiveBonds.cpp  TestFeatureSpringPotentialTwoGroups.cpp  TestFeatureSystemInformationDendrimer.cpp  TestFeatureSystemInformationRingMelt.cpp  TestFeatureSystemInformationTendomer.cpp  TestFeatureWall.cpp
tests/io/: TestFileImport.cpp  TestParser.cpp
tests/updater/: TestMoveAddMonomerBcc.cpp  TestMoveAddMonomerSc.cpp  TestMoveBreak.cpp  TestMoveBreakReactive.cpp  TestMoveConnectSc.cpp  TestMoveConnectionScReactive.cpp  TestMoveLabelAlongChain.cpp  TestMoveLocalBcc.cpp  TestMoveLocalSc.cpp  TestMoveLocalScDiag.cpp  TestReadBfmFile.cpp  TestUpdaterAbstractCreate.cpp  TestUpdaterLipidsCreator.cpp  TestUpdaterLipidsRandomInitializer.cpp  TestUpdaterSetupLinearChains.cpp  TestUpdaterSimpleConnection.cpp  TestUpdaterSwellBox.cpp  TesterHelperFunctionsLipids.h
tests/utility/: TestBoundaryCheck.cpp  TestDepthIterator.cpp  TestDistanceCalculation.cpp  TestFastBondset.cpp  TestGroupByProperty.cpp  TestLattice.cpp  TestMonomerGroups.cpp  TestRandomNumberGenerators.cpp  TestSlowBondset.cpp  TestVector3D.cpp
(+24 files in other folders)
